everything working good but havent imported good fonts and havent used different images aswell

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /* this one for maximum height */
 body,html{
-    height:100%;
+    height:100vh;
     margin:0px;
+    box-sizing: border-box;
 }
+
 /*base for the whole page*/
 .container{
     height:100%;
@@ -15,8 +17,10 @@ body,html{
     grid-column: 2 / 4;
     display: flex;
     justify-content: space-between;
-    padding: 0px 2rem;    
+    padding: 0px 2rem; 
+    padding-top:1rem;   
     align-items: center;
+    
 }
 .notis{
     width:30%;
@@ -48,6 +52,7 @@ body,html{
 
 /*base for the side section*/
 .side{
+    height:102%;
     grid-row:1/4;
     background-color: #27272a;
     display: grid;
@@ -72,13 +77,16 @@ padding-top:1rem ;
 .home{
 display: grid;
 grid-template-columns: repeat(2,2rem);
+grid-template-rows: repeat(6,2.5rem);
 height: 80%;
+
 }
 .settings{
-    margin-top: 1rem;
+   
     height:40%;
     display: grid;
     grid-template-columns: repeat(2,2rem);
+    grid-template-rows: repeat(6,2.5rem);
 }
 
 
@@ -123,28 +131,118 @@ height: 80%;
     
 }
 .option div{
-    background-color: lightblue;
-    width:25%;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 16px;
+     background-color: lightblue;
+     width:25%;
+     height: 2rem;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border-radius: 16px;
 }
 
 /*base for the article section*/
 .article{
-   
      display: grid;
-     grid-template-columns: 4fr 1fr;
+     grid-template-columns: 2.5fr 1fr;
      padding:0rem 2rem;
      padding-top: 2rem;
+     background-color:#fafafa;
+     z-index: -1;
+     height: 100%;
 }
 .posts{
-    height: 80%;
-    display: grid;
-    grid-template-columns: 1.5fr 1.5fr;
-    grid-template-rows: 1fr 1fr 1fr;
+     height:90%;
+     display: grid;
+     grid-template-columns: 1.5fr 1.5fr;
+     grid-template-rows: 1fr 1fr 1fr;
+     row-gap: 15px;
+}
+.posts h3{
+     line-height: 1px;
+}
+.posts div{    
+     width:85%;
+     background-color:white ;
+     box-shadow:3px 1px 5px #888888;
+     border-left:4px #8b8b8b solid;
+     border-radius: 5px;
+     padding:10px 10px;
+     padding-right:15px;
+     padding-bottom:15px;
+}
+.posts h3,p{
+    margin:15px;
+    padding:0px;
+}
+.watch{
+    display:flex;
+    gap:1rem;
+    justify-content: right;
+    font-size: larger;
+    padding-right: 20px;
 }
 
 
+.aside{
+    width: 100%;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    height: 100%;
+    gap:1rem;
+}
+.aside div{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+}
+.trending{
+    width:100%;
+    background-color: whitesmoke;
+    height:80%;
+    box-shadow:3px 1px 5px #888888;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding:20px 0px;
+}
+.trending section{
+    width:70%;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+    justify-content: center;
+}
+
+.trending section span{
+    display: block;
+    font-weight: bold;
+}
+.content{
+    background-color: whitesmoke;
+    height:90%;
+    box-shadow:3px 1px 5px #888888;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.content section{
+    display: flex;
+    flex-direction: column;
+    padding:0px 30px; 
+}
+.content h5, .content p{
+    margin: 2px;
+    padding: 0px;
+}
+.line {
+    height: 0px;
+    border: 1px solid #C4C4C4;
+    display:inline-block;
+  }
+  
+  .pfp1{
+  border:1px solid #800080;
+    border-radius: 30px;
+  }
